--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -15,14 +15,14 @@
             <div class="player">
                 <h2 id="player1Heading">PLAYER 1</h2>
                 <input type="text" id="player1Name" placeholder="Enter Player 1 Name">
-                <p>Saved Score: <span id="savedScore1">0</span></p>
+                <h3>Saved Score: <span id="savedScore1">0</span></h3>
             </div>
             <br>
             <br>
             <div class="player">
                 <h2 id="player2Heading">PLAYER 2</h2>
                 <input type="text" id="player2Name" placeholder="Enter Player 2 Name">
-                <p>Saved Score: <span id="savedScore2">0</span></p>
+                <h3>Saved Score: <span id="savedScore2">0</span></h3>
             </div>
         </div>
         <br>
