--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -9,24 +9,20 @@
 </head>
 
 <body>
-    <h1>Roll the Dice!</h1>
     <div id="main">
+        <h1>Roll the Dice🎲</h1>
         <div id="playerContainer">
             <div class="player">
-                <h2 id="player1Heading">PLAYER 1</h2>
+                <h2 id="player1Heading">PLAYER 1👤</h2>
                 <input type="text" id="player1Name" placeholder="Enter Player 1 Name">
                 <h3>Saved Score: <span id="savedScore1">0</span></h3>
-            </div>
-            <br>
-            <br>
+            </div><br>
             <div class="player">
-                <h2 id="player2Heading">PLAYER 2</h2>
+                <h2 id="player2Heading">PLAYER 2👤</h2>
                 <input type="text" id="player2Name" placeholder="Enter Player 2 Name">
                 <h3>Saved Score: <span id="savedScore2">0</span></h3>
-            </div>
+            </div><br>
         </div>
-        <br>
-
         <div id="gameControls">
             <h2 id="diceDisplay"><b>Dice: -) </b></h2>
             <h2 id="currentScoreDisplay">Current Score: 0</h2>
