--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -24,7 +24,7 @@
             </div><br>
         </div>
         <div id="gameControls">
-            <h2 id="diceDisplay"><b>Dice: -) </b></h2>
+            <h2 id="diceDisplay"><b>Dice:🎲 </b></h2>
             <h2 id="currentScoreDisplay">Current Score: 0</h2>
             <button id="rollDice">Roll Dice</button>
             <button id="saveButton">Save Score</button>
