--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="main">
-        <h1>Roll the Dice🎲</h1>
+        <h1 id="dis">Roll the Dice🎲</h1>
         <div id="playerContainer">
             <div class="player">
                 <h2 id="player1Heading">PLAYER 1👤</h2>
