--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -15,13 +15,13 @@
             <h2 id="turnIndicator">🎯 Player 1's Turn!</h2>
         
             <div class="player-box">
-                <h3>👤 PLAYER 1</h3>
+                <h3 id="player1Heading">👤 PLAYER 1</h3>
                 <input type="text" placeholder="Enter Player 1 Name">
                 <p>Saved Score: 0</p>
             </div>
         
             <div class="player-box">
-                <h3>👤 PLAYER 2</h3>
+                <h3 id="player2Heading">👤 PLAYER 2</h3>
                 <input type="text" placeholder="Enter Player 2 Name">
                 <p>Saved Score: 0</p>
             </div>
