--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="main">
-        <h1 id="dis">Roll the Dice🎲</h1>
+        <h1 id="dis">🎲Roll the Dice🎲</h1>
         <div class="game-container">
             <h2 id="turnIndicator">🎯 Player 1's Turn!</h2>
         
