--- a/Javascript Assignment 1/index.html
+++ b/Javascript Assignment 1/index.html
@@ -27,8 +27,8 @@
             </div>
         
             <div class="dice-display">
-                <p><b>🎲 Dice: -)</b></p>
-                <p><b>Current Score: 0</b></p>
+                <p>🎲 Dice: -)</p>
+                <p>Current Score: 0</p>
             </div>
         
             <div class="button-container">
