--- a/Javascript Assignment 2/index.html
+++ b/Javascript Assignment 2/index.html
@@ -26,7 +26,7 @@
             <br>
             <br>
             <br>
-            <button id="start-game">Start the Game</button>
+            <button id="start-game">Start the Quiz</button>
             <br>
             <br>
         </div>
