--- a/Javascript Assignment 2/index.html
+++ b/Javascript Assignment 2/index.html
@@ -40,6 +40,7 @@
 
             <p id="timer" aria-live="polite">Time Left: <span id="time-left">15</span>s</p>
             <button id="submit-answer">Submit Answer</button>
+            <button id="end-game" style="background: #dc3545; margin-top: 10px; margin-left: 10px;">End Game</button>
         </div>
 
         <!-- end screen -->
