--- a/Java SpringBoot Assignment/hr-portal/src/main/resources/static/employees.html
+++ b/Java SpringBoot Assignment/hr-portal/src/main/resources/static/employees.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-    <h2 class="title">Employee List</h2>
+    <div class="header">
+        <h2 class="title">EMPLOYEE DASHBOARD</h2>
+        <button id="logoutBtn" class="btn logout-btn">Logout</button> <!-- ✅ Added Logout Button -->
+    </div>
 
     <!-- Employee Table -->
     <table>
